--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "openweather-rest",
-	"version": "3.1.0",
+	"version": "3.1.1",
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
@@ -13,11 +13,10 @@
 	},
 	"dependencies": {
 		"@companion-module/base": "^1.11.3",
-		"jimp": "^0.22.4",
+		"jimp": "^1.6.0",
 		"node-rest-client": "^3.1.1"
 	},
 	"devDependencies": {
-		"@companion-module/tools": "^2.3.0",
-		"@types/jimp": "^0.2.28"
+		"@companion-module/tools": "^2.3.0"
 	}
 }
